# sunitinib_analysis

./: .gitignore  README.md  pyproject.toml
docs/: analysis.html  analysis.tex  guide.ipynb
sunitinib_analysis/: __init__.py  analysis.ipynb  data.csv  logger.py  test.csv  utils.py
