[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
exclude = ["*.pyc", "*.log", ".git", "dist", "venv", "*__pycache__*"]

[project]
name = "sunitinib_analysis"
version = "0.0.1"

description = "Análisis farmacocinético mono y bi-compartimental de Sunitinib en ratones, evaluando SSR y AIC para comparar modelos."
readme = "README.md"
dependencies = [
    "python-dotenv==1.0.1",
    "numpy<2",
    "matplotlib==3.9.2",
    "Jinja2==3.1.6",
    "scikit-posthocs==0.10.0",
    "coverage==7.6.8",
    "sphinx==8.1.3",
    "sphinx_rtd_theme==3.0.2",
    "ipython<=8.30.0",
    "nbconvert==7.16.6",
    "papermill==2.6.0",
    "ipykernel<=6.29.5"
]

requires-python = ">=3.13.2"
authors = [
    {name = "Emilio Rodrigo Carreira Villalta", email = "emiliorodrigo.ecr@gmail.com"}
]

maintainers = [
    {name = "Emilio Rodrigo Carreira Villalta", email = "emiliorodrigo.ecr@gmail.com"},
    {name = "Alenjandro Ayala Castañeda", email = "aayala2@alu.ucam.edu"}
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.13"
]